Fix up styles. Make things collapse. Wheeee!

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -33,3 +33,7 @@
       a
         padding-top: 12px
         padding-bottom: 12px
+
+.table-hover tbody tr:hover
+  td, th
+    background-color: #99CCFF
